--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "framer-motion": "^12.11.3",
     "lenis": "^1.3.3",
     "matter-js": "^0.20.0",
-    "next": "15.3.2",
+    "next": "^16.1.1",
     "ogl": "^1.0.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-typed": "^2.0.12",
     "zod": "^3.25.20"
